[bugbash-release-1] | Ananthu | title of question paper in preview alignment set to center

--- a/src/Preview/preview.css
+++ b/src/Preview/preview.css
@@ -7,3 +7,7 @@ code{
 li {
     padding: 3px;
 }
+
+.questionPaperTitle {
+    text-align: center;
+}
